added registration form for both versions

--- a/Version2/index.html
+++ b/Version2/index.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#about">Login</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#projects">About Us</a></li>
                         <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
                     </ul>
                 </div>
@@ -71,6 +71,9 @@
                                                         <div class="form-group">
                                                             <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
                                                             <input type="submit" name="submit" class="btn btn-primary" value="submit">
+                                                        </div>
+                                                        <div id="register-link" class="text-center">
+                                                            <a href="register.html" class="text-info">Create an Account</a>
                                                         </div>
                                                         <div id="register-link" class="text-center">
                                                             <a href="pass_reset_form.html" class="text-info">Forgot your password?</a>
