--- a/Version1/login.html
+++ b/Version1/login.html
@@ -63,6 +63,9 @@
                                     <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
                                 </div>
                                 <div id="register-link" class="text-center">
+                                  <a href="register.html" class="text-info">Create an Account</a>
+                              </div>
+                                <div id="register-link" class="text-center">
                                     <a href="pass_reset_form.html" class="text-info">Forgot your password?</a>
                                 </div>
                             </form>
