--- a/Version2/pass_reset_form.html
+++ b/Version2/pass_reset_form.html
@@ -26,9 +26,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#about">Login</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
+                      <li class="nav-item"><a class="nav-link" href="index.html#about">Login</a></li>
+                      <li class="nav-item"><a class="nav-link" href="index.html#projects">About Us</a></li>
+                      <li class="nav-item"><a class="nav-link" href="index.html#signup">Contact</a></li>
                     </ul>
                 </div>
             </div>
