started adding js for form validation. Still a bit rusty.

--- a/Version1/register.html
+++ b/Version1/register.html
@@ -96,7 +96,7 @@
     </header>
 
     <div class="container">
-        <form class="form-horizontal" action='' method="POST">
+        <form class="form-horizontal" action='#' method="">
             <fieldset>
               <div id="legend">
                 <legend class="">Register</legend>
@@ -140,13 +140,13 @@
               <div class="control-group">
                 <!-- Button -->
                 <div class="controls">
-                  <button class="btn btn-success">Register</button>
+                  <button id="submit" type="submit" class="btn btn-success">Register</button>
                 </div>
               </div>
             </fieldset>
           </form>
     </div>
-
+    <script src="app.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script
       src="https://code.jquery.com/jquery-1.12.4.min.js"
