--- a/Version1/index.html
+++ b/Version1/index.html
@@ -95,7 +95,7 @@
           name is the Lord when I lay My vengeance upon thee.
         </p>
   </div>
-
+  <script src="app.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
